Fix reset button alignment on mobile view

--- a/css/style.css
+++ b/css/style.css
@@ -20,3 +20,5 @@ table.tagList thead td { font-weight: bold; }
 table.tagList td { border: 1px solid grey; padding: 2px; }
 #tags .highlighted { background: #f87217; }
 #tags form { width: 50%; }
+
+#zoomResetButton { margin-top: .5em; }
